--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="select_to_compare">Select two rows to compare currencies</string>
     <string name="compare">Compare</string>
     <string name="hint_text">Amount in %1$s</string>
+    <string name="error_message">An error has occurred, please try again later.</string>
 </resources>
